kubernetes-networks/canary/ingress-prod.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: nginx-ingress.local
     http:
      paths:
      - path: /production
        pathType: Prefix
        backend:
          service:
            name: svc-prod
            port:
              number: 8000
